@@ -28,11 +28,8 @@
 #include "intl.h"
 #include "tree.h"
 #include "flags.h"
-#include "output.h"
-#include "rtl.h"
 #include "ggc.h"
 #include "vec.h"
-#include "expr.h"
 #include "diagnostic.h"
 #include "tm_p.h"
 #include "target.h"
