@@ -15,20 +15,5 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-/* This should be autoconf'd, but I want to avoid
-   patching the configure script. */
-#include <stdlib.h>
-#ifndef alloca
-# if _WIN32
-#  include <malloc.h>
-# elif __sun__
-#  include <alloca.h>
-# elif SKYOS
-#  define alloca __builtin_alloca
-# elif defined(__APPLE__) && (GCC_VER <= 33) || defined(__OpenBSD__)
-#  include <stdlib.h>
-# else
-/* guess... */
-#  include <alloca.h>
-# endif
-#endif
+#include "config.h"
+#include "libiberty.h"
